Fixed spacing issues caused by new default list styles

--- a/src/sass/footer-system/_footer-social.scss
+++ b/src/sass/footer-system/_footer-social.scss
@@ -4,8 +4,8 @@
 
 .#{$prefix}-footer-social {
   background-color: $color-crimson-base;
-  padding-top: $spacing-sm;
-  padding-bottom: $spacing-sm;
+  padding-top: $spacing-md;
+  padding-bottom: $spacing-md;
 
   &__list {
     display: flex;
@@ -13,6 +13,8 @@
     list-style: none;
     padding: 0;
     justify-content: center;
+    margin-top: 0;
+    margin-bottom: 0;
 
     li {
       margin-top: 0;
